--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,18 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.0",
-    "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.4"
+    "bcrypt": "^6.0.0",          // latest stable 
+    "cors": "^2.8.6",            // latest stable 
+    "dotenv": "^17.3.1",         // latest stable 
+    "express": "^5.2.1",         // latest stable 
+    "jsonwebtoken": "^9.0.3",    // latest stable 
+    "multer": "^2.0.2",          // latest stable 
+    "mysql2": "^3.17.1",         // latest stable 
+    "node-cron": "^4.4.0",       // latest stable 
+    "nodemailer": "^8.0.1"       // latest stable 
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"         // latest stable 
   },
   "author": "",
   "license": "ISC"
