--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.5.0",       // latest stable
-    "@testing-library/react": "^16.1.0",         // latest stable
-    "@testing-library/user-event": "^14.6.1",    // latest stable
-    "react": "^18.3.1",                          // latest stable
-    "react-dom": "^18.3.1",                      // latest stable
-    "react-scripts": "5.0.1",                    // still latest (CRA not updated)
-    "web-vitals": "^4.2.0"                       // latest stable
+    "@testing-library/jest-dom": "^6.5.0",       
+    "@testing-library/react": "^16.1.0",         
+    "@testing-library/user-event": "^14.6.1",    
+    "react": "^18.3.1",                          
+    "react-dom": "^18.3.1",                      
+    "react-scripts": "5.0.1",                    
+    "web-vitals": "^4.2.0"                       
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,3 +36,4 @@
     ]
   }
 }
+
